feat: added files from html to client folder

--- a/src/client/login.html
+++ b/src/client/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Pursuit Software Chatbot</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/styles/login.css">
     <style>
         * {
             margin: 0;
@@ -44,6 +44,6 @@
     </div>
     
 
-    <script src="script.js"></script>
+    <script src="../static/styles/login.js"></script>
 </body>
 </html>
