--- a/src/client/registration.html
+++ b/src/client/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Pursuit Software Chatbot</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="../static/styles/registration.css">
     <style>
         * {
             margin: 0;
@@ -22,7 +22,7 @@
             </label>
         </div>
     </div>
-
+ 
     <div class="main-container">
         <div class="register-container">
             <div class="register-box">
@@ -49,7 +49,8 @@
             </div>
         </div>
     </div>
-
-    <script src="script1.js"></script>
+ 
+    <script src="../static/styles/registration.js"></script>
 </body>
 </html>
+ 
