refactor: client deploment

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual HR</title>
-    <link rel="stylesheet" href="../static/styles/Home.css">
+    <title>HR ChatBot</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div class="container">
         <div class="left-panel">
-            <img src="../static/CompanyLogo 1.png" alt="Company Logo" class="logo">
+            <img src="images/pursuit.png" alt="Company Logo" class="logo">
             <h1 class="hi">Hi, I am Synthia</h1>
             <p id="subtitle"></p>
-            <div class="get-started-button">Get Started</div>
+            <button class="get-started-button">Get Started</button>
         </div>
         <div class="right-panel">
-            <img class="robot" src="../static/file.png" alt="Virtual HR Bot">
+            <img class="robot" src="images/hero.png" alt="Virtual HR Bot">
             <div class="message">Let me Run!</div>
         </div>
         <button class="dark-mode-toggle">🌗</button>
     </div>
     
-    <script src="../static/styles/Home.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
