--- a/src/client/signin.html
+++ b/src/client/signin.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Pursuit Software Chatbot</title>
-    <link rel="stylesheet" href="../static/styles/login.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-    </style>
-</head>
-<body class="light-mode">
-    <div class="toggle-container">
-        <div class="toggle">
-            <input type="checkbox" id="toggle" class="toggle-input">
-            <label for="toggle" class="toggle-label">
-                <div class="toggle-handle"></div>
-            </label>
-        </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>HR ChatBot | Sign In</title>
+        <link rel="icon" type="image/png" href="favicon.ico">
+		<link rel="stylesheet" href="styles/signin.css" />
+		<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+		</style>
+	</head>
+	<body class="light-mode">
+		<div class="toggle-container">
+			<div class="toggle">
+				<input type="checkbox" id="toggle" class="toggle-input" />
+				<label for="toggle" class="toggle-label">
+					<div class="toggle-handle"></div>
+				</label>
+			</div>
+		</div>
 
+		<div class="main-container">
+			<div class="login-container">
+				<div class="login-box">
+					<h1 class="login-title">Login to Chat</h1>
+					<form action="#" method="post" id="login-form">
+						<div class="input-group">
+							<label for="userid">User ID</label>
+							<input type="text" id="userid" name="userid" required />
+						</div>
+						<div class="input-group">
+							<label for="password">Password</label>
+							<input type="password" id="password" name="password" required />
+						</div>
+						<button type="submit" class="login-button">Login</button>
+					</form>
+				</div>
+			</div>
+		</div>
 
-    <div class="main-container">
-        <div class="login-container">
-            <div class="login-box">
-                <h1 class="login-title">Login to Chat</h1>
-                <form action="#" method="post" id="login-form">
-                    <div class="input-group">
-                        <label for="userid">User ID</label>
-                        <input type="text" id="userid" name="userid" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <button type="submit" class="login-button">Login</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    
-
-    <script src="../static/styles/login.js"></script>
-</body>
+		<script src="scripts/signin.js"></script>
+	</body>
 </html>
