--- a/src/client/signup.html
+++ b/src/client/signup.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Pursuit Software Chatbot</title>
-    <link rel="stylesheet" href="../static/styles/registration.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-    </style>
-</head>
-<body class="light-mode">
-    <div class="toggle-container">
-        <div class="toggle">
-            <input type="checkbox" id="toggle" class="toggle-input">
-            <label for="toggle" class="toggle-label">
-                <div class="toggle-handle"></div>
-            </label>
-        </div>
-    </div>
- 
-    <div class="main-container">
-        <div class="register-container">
-            <div class="register-box">
-                <h1 class="register-title">Register for Chat</h1>
-                <form action="#" method="post" id="register-form">
-                    <div class="input-group">
-                        <label for="username">Username</label>
-                        <input type="text" id="username" name="username" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="confirm-password">Confirm Password</label>
-                        <input type="password" id="confirm-password" name="confirm-password" required>
-                    </div>
-                    <button type="submit" class="register-button">Register</button>
-                </form>
-            </div>
-        </div>
-    </div>
- 
-    <script src="../static/styles/registration.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>HR ChatBot | Sign Up</title>
+        <link rel="icon" type="image/png" href="favicon.ico">
+		<link rel="stylesheet" href="styles/signup.css" />
+		<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+		</style>
+	</head>
+	<body class="light-mode">
+		<div class="toggle-container">
+			<div class="toggle">
+				<input type="checkbox" id="toggle" class="toggle-input" />
+				<label for="toggle" class="toggle-label">
+					<div class="toggle-handle"></div>
+				</label>
+			</div>
+		</div>
+
+		<div class="main-container">
+			<div class="register-container">
+				<div class="register-box">
+					<h1 class="register-title">Register for Chat</h1>
+					<form action="#" method="post" id="register-form">
+						<div class="input-group">
+							<label for="username">Username</label>
+							<input type="text" id="username" name="username" required />
+						</div>
+						<div class="input-group">
+							<label for="email">Email</label>
+							<input type="email" id="email" name="email" required />
+						</div>
+						<div class="input-group">
+							<label for="password">Password</label>
+							<input type="password" id="password" name="password" required />
+						</div>
+						<div class="input-group">
+							<label for="confirm-password">Confirm Password</label>
+							<input type="password" id="confirm-password" name="confirm-password" required />
+						</div>
+						<button type="submit" class="register-button">Register</button>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<script src="scripts/signup.js"></script>
+	</body>
 </html>
- 
