--- a/src/client/signin.html
+++ b/src/client/signin.html
@@ -1,48 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>HR ChatBot | Sign In</title>
-        <link rel="icon" type="image/png" href="favicon.ico">
-		<link rel="stylesheet" href="styles/signin.css" />
-		<style>
-			* {
-				margin: 0;
-				padding: 0;
-				box-sizing: border-box;
-			}
-		</style>
-	</head>
-	<body class="light-mode">
-		<div class="toggle-container">
-			<div class="toggle">
-				<input type="checkbox" id="toggle" class="toggle-input" />
-				<label for="toggle" class="toggle-label">
-					<div class="toggle-handle"></div>
-				</label>
-			</div>
-		</div>
 
-		<div class="main-container">
-			<div class="login-container">
-				<div class="login-box">
-					<h1 class="login-title">Login to Chat</h1>
-					<form action="#" method="post" id="login-form">
-						<div class="input-group">
-							<label for="userid">User ID</label>
-							<input type="text" id="userid" name="userid" required />
-						</div>
-						<div class="input-group">
-							<label for="password">Password</label>
-							<input type="password" id="password" name="password" required />
-						</div>
-						<button type="submit" class="login-button">Login</button>
-					</form>
-				</div>
-			</div>
-		</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register & Login</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="styles/signin.css">
+  <script type="module" src="scripts/auth.js"></script>
+</head>
 
-		<script src="scripts/signin.js"></script>
-	</body>
+<body>
+  <header>
+    <img src="images/pursuit.png" alt="Pursuit Software" />
+    <!-- <div class="dark-mode-toggle">
+      <label class="switch">
+        <input type="checkbox" id="darkModeToggle" />
+        <span class="slider round"></span>
+      </label>
+    </div> -->
+  </header>
+
+  <div class="container" id="signup" style="display:none;">
+    <h1 class="form-title">Register</h1>
+    <form method="post" action="">
+      <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
+      <div class="input-group">
+        <i class="fas fa-user"></i>
+        <input type="text" id="fName" placeholder="First Name" required>
+        <label for="fname">First Name *</label>
+      </div>
+      <div class="input-group">
+        <i class="fas fa-user"></i>
+        <input type="text" id="lName" placeholder="Last Name" required>
+        <label for="lName">Last Name *</label>
+      </div>
+      <div class="input-group">
+        <i class="fas fa-envelope"></i>
+        <input type="email" id="rEmail" placeholder="Email" required>
+        <label for="rEmail">Email *</label>
+      </div>
+      <div class="input-group">
+        <i class="fas fa-lock"></i>
+        <input type="password" id="rPassword" placeholder="Password" required>
+        <label for="rPassword">Password *</label>
+      </div>
+      <button class="btn" id="submitSignUp">Sign Up</button>
+    </form>
+    <!-- <p class="or">
+        ----------or--------
+</p>
+<div class="icons">
+<i class="fab fa-google"></i>
+<i class="fab fa-facebook"></i>
+</div> -->
+    <div class="links">
+      <p>Already Have Account ?</p>
+      <button id="signInButton">Sign In</button>
+    </div>
+  </div>
+
+  <div class="container" id="signIn">
+    <h1 class="form-title">Sign In</h1>
+    <form method="post" action="">
+      <div id="signInMessage" class="messageDiv" style="display:none;"></div>
+
+      <div class="input-group">
+        <i class="fas fa-envelope"></i>
+        <input type="email" id="email" placeholder="Email" required>
+        <label for="email">Email *</label>
+      </div>
+      <div class="input-group">
+        <i class="fas fa-lock"></i>
+        <input type="password" id="password" placeholder="Password" required>
+        <label for="password">Password *</label>
+      </div>
+      <!-- <p class="recover">
+<a href="#">Recover Password</a>
+</p> -->
+      <button class="btn" id="submitSignIn">Sign In</button>
+    </form>
+    <!-- <p class="or">
+          ----------or--------
+</p>
+<div class="icons">
+<i class="fab fa-google"></i>
+<i class="fab fa-facebook"></i>
+</div> -->
+    <div class="links">
+      <p>Don't have account yet?</p>
+      <button id="signUpButton">Sign Up</button>
+    </div>
+  </div>
+
+  <script src="scripts/signin.js"></script>
+</body>
+
 </html>
